Fix failure table styling on Firefox

--- a/app/assets/_failures.sass
+++ b/app/assets/_failures.sass
@@ -18,7 +18,6 @@
       text-transform: uppercase
 
     td
-      max-width: 0
       vertical-align: top
 
       &.date
